# codex-serve

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs  prompt.rs  serve_config.rs  server.rs
src/openai/: chat.rs  mod.rs  schema.rs
src/server/: executor.rs  mod.rs  response.rs  state.rs  test_server.rs
tests/: chat_completions.rs
